--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="130dp"
-            android:background="@color/white"
+            android:background="@color/Hex"
             android:paddingTop="10dp"
             android:paddingBottom="40dp">
 
